--- a/src/main/webapp/ui/vistas/crearUsuario.html
+++ b/src/main/webapp/ui/vistas/crearUsuario.html
@@ -1,21 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-
-    <head>
-
-    </head>
-
-<!--{
-    "nombre": "admin",
-    "apellido": "admin",
-    "email": null,
-    "password": "123",
-    "username": "adminnn"
-} -->
+    <head></head>
     <body>
         <div class="cuerpo">
             <div class="paquete">
-            <div class="items" style="background: red">
+            <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
                         <label class="col-12 ">Ingrese su Nombre</label>
@@ -26,11 +15,11 @@
                         <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
-                <div class="seccion">
+                <div class="spam">
                     <span class="form-text alertas">dwdwdwdwddw</span>
                 </div>
             </div>
-            <div class="items" style="background: blue">
+            <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
                         <label class="col-12 ">Ingrese su Apellido</label>
@@ -41,11 +30,11 @@
                         <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
-                <div class="seccion">
+                <div class="spam">
                     <span class="form-text alertas">dwdwdwdwddw</span>
                 </div>
             </div>
-            <div class="items" style="background: green">
+            <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
                         <label class="col-12 ">Ingrese su Email</label>
@@ -56,11 +45,11 @@
                         <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
-                <div class="seccion">
+                <div class="spam">
                     <span class="form-text alertas">dwdwdwdwddw</span>
                 </div>
             </div>
-            <div class="items" style="background: greenyellow">
+            <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
                         <label class="col-12 ">Ingrese su Contraseña</label>
@@ -71,11 +60,11 @@
                         <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
-                <div class="seccion">
+                <div class="spam">
                     <span class="form-text alertas">dwdwdwdwddw</span>
                 </div>
             </div>
-            <div class="items" style="background: brown">
+            <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
                         <label class="col-12 ">Ingrese su Usuario</label>
@@ -86,10 +75,27 @@
                         <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
                     </div>
                 </div>
-                <div class="seccion">
+                <div class="spam">
                     <span class="form-text alertas">dwdwdwdwddw</span>
                 </div>
             </div>
+                <div class="items">
+                    <div class="textos">
+                        <div class="col-12 item  bg-light text-dark">
+                            <label class="col-12 ">Seleccione el rol que desempeñará</label>
+                        </div>
+                    </div>
+                    <div class="seccion">
+                            <select class="input-group mb-3 form-control item entrada" id="floatingSelect" aria-label="Floating label select example">
+                                <option selected></option>
+                                <option value="1">Estandard</option>
+                                <option value="2">Administrador</option>
+                            </select>
+                    </div>
+                    <div class="spam">
+                        <span class="form-text alertas">dwdwdwdwddw</span>
+                    </div>
+                </div>
                 <div class="registrase">
                     <button type="button" class="btn btn-secondary boton">Registrarse</button>
                 </div>
@@ -99,52 +105,13 @@
 </html>
 
 
-
-
-        <!--  <div class="izquierda">
-              <div class="col-12 item  bg-light text-dark">
-                  <label class="col-12 ">Ingrese su Nombre</label>
-              </div>
-              <div class="col-12 item  bg-light text-dark">
-                  <label class="col-12 ">Ingrese su Apellido</label>
-              </div>
-              <div class="col-12 item  bg-light text-dark">
-                  <label class="col-12 ">Ingrese su Email</label>
-              </div>
-              <div class="col-12 item  bg-light text-dark">
-                  <label class="col-12 ">Ingrese su contraseña</label>
-              </div>
-              <div class="col-12 item  bg-light text-dark">
-                  <label class="col-12 ">Ingrese su usuario</label>
-              </div>
-          </div>
-
-          <div class="medio">
-              <div class="input-group mb-3 item ">
-                  <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-              </div>
-
-              <div class="input-group mb-3 item">
-                  <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-              </div>
-
-              <div class="input-group mb-3 item">
-                  <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-              </div>
-
-              <div class="input-group mb-3 item">
-                  <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-              </div>
-
-              <div class="input-group mb-3 item">
-                  <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-              </div>
-
-
-
-          </div>
-
-          <div class="derecha">
-
-
-          </div> -->
+<!--
+<div class="input-group mb-3 item entrada">
+  <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+    <option selected>Open this select menu</option>
+    <option value="1">One</option>
+    <option value="2">Two</option>
+    <option value="3">Three</option>
+  </select>
+</div>
+-->
