--- a/src/main/webapp/ui/vistas/crearUsuario.html
+++ b/src/main/webapp/ui/vistas/crearUsuario.html
@@ -7,7 +7,7 @@
             <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
-                        <label class="col-12 ">Ingrese su Nombre</label>
+                        <label class="col-12 ">Ingrese su nombre</label>
                     </div>
                 </div>
                 <div class="seccion">
@@ -22,7 +22,7 @@
             <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
-                        <label class="col-12 ">Ingrese su Apellido</label>
+                        <label class="col-12 ">Ingrese su apellido</label>
                     </div>
                 </div>
                 <div class="seccion">
@@ -37,7 +37,7 @@
             <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
-                        <label class="col-12 ">Ingrese su Email</label>
+                        <label class="col-12 ">Ingrese su email</label>
                     </div>
                 </div>
                 <div class="seccion">
@@ -52,7 +52,7 @@
             <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
-                        <label class="col-12 ">Ingrese su Contraseña</label>
+                        <label class="col-12 ">Ingrese su contraseña</label>
                     </div>
                 </div>
                 <div class="seccion">
@@ -67,7 +67,7 @@
             <div class="items">
                 <div class="textos">
                     <div class="col-12 item  bg-light text-dark">
-                        <label class="col-12 ">Ingrese su Usuario</label>
+                        <label class="col-12 ">Ingrese su usuario</label>
                     </div>
                 </div>
                 <div class="seccion">
