--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Spitale-Gaido">
-    <link rel="icon" type="image/ico" href="/ui/favicon.ico" sizes="32x32">
+    <link rel="icon" type="image/png" href="/sisterna.png" sizes="32x32">
     <script type="text/javascript" src="ui/lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="ui/lib/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="ui/app.js"></script>
     <link href="ui/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="ui/lib/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="ui/lib/font-awesome/css/fontawesome.min.css" rel="stylesheet">
@@ -25,12 +24,13 @@
     <script type="text/javascript" src="ui/lib/jquery-ui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="ui/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
-
-
+    <script type="text/javascript" src="ui/app.js"></script>
+    <script type="text/javascript" src="ui/modulos/ordenes/ordenes-modulo.js"></script>
 
 
     <script type="text/javascript" src="ui/controladores/perfilController.js"></script>
     <script type="text/javascript" src="ui/controladores/loginController.js"></script>
+    <script type="text/javascript" src="ui/modulos/ordenes/ordenes-controller.js"></script>
 
     <script type="text/javascript" src="ui/rutas.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -42,8 +42,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body ng-app="trabajoIntegrador">
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Link</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Link</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+<body ng-app="trabajoIntegrador">  <!--Modulo de Angular I> -->
 <div style="height: 100%; width: 100%" ng-view=""></div>
 </body>
 </html>
