carga desde la bd

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,11 +26,12 @@
 
     <script type="text/javascript" src="ui/app.js"></script>
     <script type="text/javascript" src="ui/modulos/ordenes/ordenes-modulo.js"></script>
+    <script type="text/javascript" src="ui/modulos/ordenes/ordenes-controller.js"></script>
+    <script type="text/javascript" src="ui/modulos/ordenes/ordenes-service.html.js"></script>
 
 
     <script type="text/javascript" src="ui/controladores/perfilController.js"></script>
     <script type="text/javascript" src="ui/controladores/loginController.js"></script>
-    <script type="text/javascript" src="ui/modulos/ordenes/ordenes-controller.js"></script>
 
     <script type="text/javascript" src="ui/rutas.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
