--- a/src/main/webapp/ui/vistas/loguin.html
+++ b/src/main/webapp/ui/vistas/loguin.html
@@ -1,32 +1,42 @@
-<div class="modal-header">
-    <h3 class="modal-title">{{title}}</h3>
+<div class="cuerpo">
+    <div class="paquete">
+        <div class="items">
+            <div class="textos">
+                <div class="col-12 item  bg-light text-dark">
+                    <label class="col-12 ">Ingrese su nombre o Email</label>
+                </div>
+            </div>
+            <div class="seccion">
+                <div class="input-group mb-3 item entrada">
+                    <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                </div>
+            </div>
+            <div class="spam">
+                <span class="form-text alertas">dwdwdwdwddw</span>
+            </div>
+        </div>
+        <div class="items">
+            <div class="textos">
+                <div class="col-12 item  bg-light text-dark">
+                    <label class="col-12 ">Ingrese su contraseña</label>
+                </div>
+            </div>
+            <div class="seccion">
+                <div class="input-group mb-3 item entrada">
+                    <input type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                </div>
+            </div>
+            <div class="spam">
+                <span class="form-text alertas">dwdwdwdwddw</span>
+            </div>
+        </div>
+        <div class="items">
+        </div>
+        <div class="registrase">
+            <button type="button" class="btn btn-secondary boton">Iniciar Sesión</button>
+        </div>
+    </div>
 </div>
-<form class="form-horizontal">
-    <fieldset>
-        <div class="modal-body">
-
-            <div class="form-group">
-                <label class="col-md-4 control-label">Usuari@</label>
-                <div class="col-md-8">
-                    <input type="text" class="form-control"
-                           placeholder="Nombre de usuari@" ng-model="user.name" required
-                           autofocus>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="col-md-4 control-label">Clave</label>
-                <div class="col-md-8">
-                    <input type="password" class="form-control" placeholder="Clave"
-                           ng-model="user.password" required>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" type="submit" ng-click="login()">Ingresar</button>
-        </div>
-    </fieldset>
-</form>
 
 <!--
 número, estado, camión, preset, carga actual, última temperatura,
