--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="ui/lib/jquery-ui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="ui/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script type="text/javascript" src="ui/lib/ng-stomp/dist/ng-stomp.standalone.min.js"></script>
 
     <script type="text/javascript" src="ui/app.js"></script>
     <script type="text/javascript" src="ui/rutas.js"></script>
