mejorada la ŧabla del perfil
Signed-off-by: Pablo592 <pgaido524@alumnos.iua.edu.ar>

--- a/src/main/webapp/ui/vistas/perfil.html
+++ b/src/main/webapp/ui/vistas/perfil.html
@@ -2,73 +2,41 @@
 <html lang="es">
 <head></head>
 <body>
-    <div class="paquetePerfil">
-        <div class="headerPerfil">
-        <div class="headerPerfil1"></div>
-        <div class="headerPerfil2"></div>
-        <div class="headerPerfil3"></div>
+
+  <div class="tabla">
+    <div class="encabezadoTabla">
+      <div class="espacioVacio"></div>
+      <div class="titulo">Número</div>
+      <div class="titulo">Estado</div>
+      <div class="titulo">Camión</div>
+      <div class="titulo">Preset</div>
+      <div class="titulo">Carga</div>
+      <div class="titulo">Temperatura</div>
+      <div class="titulo">Densidad</div>
+      <div class="titulo">Caudal</div>
+      <div class="titulo">Tiempo transcurrido</div>
+      <div class="titulo">Tiempo restante</div>
+      <div class="titulo">Estadisticas</div>
+      <div class="titulo">Gráfica</div>
+      <div class="espacioVacio"></div>
     </div>
-    <div class="bodyPerfil">
-        <table class="table">
-            <thead>
-              <tr class="celdaPerfil">
-                <th scope="col">Número</th>
-                <th scope="col">Estado</th>
-                <th scope="col">Camión</th>
-                <th scope="col">Preset</th>
-                <th scope="col">Carga</th>
-                <th scope="col">Temperatura</th>
-                <th scope="col">Densidad</th>
-                <th scope="col">Caudal</th>
-                <th scope="col">Tiempo transcurrido</th>
-                <th scope="col">Tiempo restante</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="celdaPerfil">
-                  <td>@mdo</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td>@mdo</td>
-                  <td>Otto</td>
-                  <td>Otto</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td><button type="button" class="btn btn-secondary">Secondary</button></td>
-              </tr>
-              <tr class="celdaPerfil">
-                  <td>@mdo</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td>@mdo</td>
-                  <td>@mdo</td>
-                  <td>@mdo</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td><button type="button" class="btn btn-secondary">Secondary</button></td>
-              </tr>
-              <tr class="celdaPerfil">
-                  <td>@mdo</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td>@mdo</td>
-                  <td>@mdo</td>
-                  <td>@mdo</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                  <td><button type="button" class="btn btn-secondary">Secondary</button></td>
-              </tr>
-            </tbody>
-          </table>
-          
-        </div>
+    <div class="filasTabla"> <!--En esta fila va el ng-repeat-->
+      <div class="espacioVacio"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"><img class="imagen" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvpt6spFV3pDKV36GRdIijPno83SjH9mKa_A&usqp=CAU" alt=""></div>
+      <div class="celda"><img class="imagen" src="https://cdn-icons-png.flaticon.com/512/58/58976.png" alt=""></div>
+      <div class="espacioVacio"></div>
     </div>
+  </div>
 </body>
 
 <!--
