loguin con auth*-token protegido

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,11 +24,11 @@
     <script type="text/javascript" src="ui/lib/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="ui/lib/jquery-ui/jquery-ui.min.js"></script>
     <script type="text/javascript" src="ui/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-
     <script type="text/javascript" src="ui/lib/ng-stomp/dist/ng-stomp.standalone.min.js"></script>
 
     <script type="text/javascript" src="ui/app.js"></script>
     <script type="text/javascript" src="ui/rutas.js"></script>
+    <script type="text/javascript" src="ui/interceptores.js"></script>
 
     <script type="text/javascript" src="ui/modulos/ordenes/ordenes-modulo.js"></script>
     <script type="text/javascript" src="ui/modulos/ordenes/ordenes-controller.js"></script>
@@ -39,14 +39,9 @@
 
     <script type="text/javascript" src="ui/controladores/perfilController.js"></script>
 
-
-
-
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="ui/vistas/crearUsuario.css">
     <link rel="stylesheet" type="text/css" href="ui/vistas/perfil.css">
-
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
