--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,6 +42,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="ui/vistas/crearUsuario.css">
     <link rel="stylesheet" type="text/css" href="ui/vistas/perfil.css">
+    <link rel="stylesheet" type="text/css" href="ui/modulos/ordenes/ordenes.css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
