interfaz de actualizar orden
Signed-off-by: Pablo592 <pgaido524@alumnos.iua.edu.ar>

--- a/src/main/webapp/ui/modulos/ordenes/ordenes.html
+++ b/src/main/webapp/ui/modulos/ordenes/ordenes.html
@@ -93,9 +93,9 @@
           <div class="filasTabla">
             <div class="espacioPequenio"></div>
             <div class="fuente">Codigo Externo:</div>
-            <div class="sector"><input class="inputs" type="number" ng-model=""></div>
+            <div class="sector"><input class="inputs" type="number" ng-model="orden.codigoExterno"></div>
             <div class="fuente">Fecha pesaje inicial:</div>
-            <div class="sector"><input class="inputs" type="date" ng-model=""></div>
+            <div class="sector"><input class="inputs" type="date" ng-model="orden.fechaPesajeInicial"></div>
             <div class="espacio"></div>
             <div class="espacioVacio"></div>
           </div>
@@ -111,7 +111,7 @@
             <div class="fuente">Patente:</div>
             <div class="sector"><input class="inputs" type="text" placeholder="letra letra numero numero numero letra letra" ng-model="orden.camion.patente"></div>
             <div class="fuente">tara (kg):</div>
-            <div class="sector"><input class="inputs" type="number" ng-model=""></div>
+            <div class="sector"><input class="inputs" type="number" ng-model="orden.camion.tara"></div>
             <div class="espacio"></div>
             <div class="espacioVacio"></div>
           </div>
@@ -134,7 +134,7 @@
             <div class="filasTabla">
               <div class="espacioPequenio"></div>
               <div class="fuente">Codigo Externo:</div>
-              <div class="sector"><input class="inputs" type="number" ng-model=""></div>
+              <div class="sector"><input class="inputs" type="number" ng-model="orden.codigoExterno"></div>
               <div class="espacio"></div>
               <div class="espacioVacio"></div>
               <div class="espacio"></div>
@@ -158,9 +158,9 @@
               <div class="filasTabla">
                 <div class="espacioPequenio"></div>
                 <div class="fuente">Codigo Externo:</div>
-                <div class="sector"><input class="inputs" type="number" ng-model=""></div>
+                <div class="sector"><input class="inputs" type="number" ng-model="orden.codigoExterno"></div>
                 <div class="fuente">Fecha pesaje final:</div>
-                <div class="sector"><input class="inputs" type="date" ng-model=""></div>
+                <div class="sector"><input class="inputs" type="date" ng-model="orden.fechaRecepcionPesajeFinal"></div>
                 <div class="espacio"></div>
                 <div class="espacioVacio"></div>
               </div>
@@ -176,7 +176,7 @@
                 <div class="fuente">Patente:</div>
                 <div class="sector"><input class="inputs" type="text" placeholder="letra letra numero numero numero letra letra" ng-model="orden.camion.patente"></div>
                 <div class="fuente">Peso final (kg):</div>
-                <div class="sector"><input class="inputs" type="number" ng-model=""></div>
+                <div class="sector"><input class="inputs" type="number" ng-model="orden.camion.pesoFinalCamion"></div>
                 <div class="espacio"></div>
                 <div class="espacioVacio"></div>
               </div>
