--- a/src/main/webapp/ui/modulos/ordenes/ordenes.html
+++ b/src/main/webapp/ui/modulos/ordenes/ordenes.html
@@ -8,20 +8,18 @@
     <div class="encabezado">
         <div class="tabla">
             <div class="form-check filasTabla">
-                <input class="form-check-input fuente" type="radio" name="exampleRadios" ng-click="necesitoCrear()" id="exampleRadios1" value="option1" checked>
-                <label class="form-check-label fuente" for="exampleRadios1">
-          Crear Orden
-        </label>
+                <input class="form-check-input fuente" type="radio" name="exampleRadios" ng-click="necesitoCrear()"
+                    id="exampleRadios1" value="option1" checked>
+                <label class="form-check-label fuente" for="exampleRadios1">Crear Orden</label>
                 <div class="espacio"></div>
                 <div class="espacio"></div>
                 <div class="espacio"></div>
                 <div class="espacio"></div>
             </div>
             <div class="form-check filasTabla">
-                <input class="form-check-input fuente" type="radio" name="exampleRadios" ng-click="necesitoActualizar()" id="exampleRadios2" value="option2">
-                <label class="form-check-label fuente" for="exampleRadios2">
-          Actualizar Orden
-        </label>
+                <input class="form-check-input fuente" type="radio" name="exampleRadios" ng-click="necesitoActualizar()"
+                    id="exampleRadios2" value="option2">
+                <label class="form-check-label fuente" for="exampleRadios2">Actualizar Orden</label>
                 <div class="espacio"></div>
                 <div class="espacio"></div>
                 <div class="espacio"></div>
@@ -30,9 +28,11 @@
             <br>
             <div class="filasTabla" ng-show="situacion != 0">
                 <div class="espacioPequenio"></div>
-                <select class="form-select fuente" aria-label="Default select example" ng-model="elegido" ng-mouseleave="ordenParaActualizar()">
-          <option ng-value="list" ng-repeat="list in listaOrdenes"  ng-selected="ordenParaActualizar()">Id: {{list.codigoExterno}} , Estado {{list.estado}} </option>
-        </select>
+                <select class="form-select fuente" aria-label="Default select example" ng-model="elegido"
+                    ng-mouseleave="ordenParaActualizar()">
+                    <option ng-value="list" ng-repeat="list in listaOrdenes" ng-selected="ordenParaActualizar()">Id:
+                        {{list.codigoExterno}} , Estado {{list.estado}} </option>
+                </select>
                 <div class="espacio"></div>
             </div>
         </div>
@@ -60,9 +60,12 @@
                 <div class="filasTabla">
                     <div class="espacioPequenio"></div>
                     <div class="fuente">Patente:</div>
-                    <div class="sector"><input class="inputs" type="text" placeholder="letra letra numero numero numero letra letra" ng-model="orden.camion.patente"></div>
+                    <div class="sector"><input class="inputs" type="text"
+                            placeholder="letra letra numero numero numero letra letra" ng-model="orden.camion.patente">
+                    </div>
                     <div class="fuente">Cisternado (litros):</div>
-                    <div class="sector"><input class="inputs" type="number" ng-model="orden.camion.cisternadoLitros"></div>
+                    <div class="sector"><input class="inputs" type="number" ng-model="orden.camion.cisternadoLitros">
+                    </div>
                     <div class="fuente">Preset (kg):</div>
                     <div class="sector"><input class="inputs" type="number" ng-model="orden.camion.preset"></div>
                 </div>
@@ -144,7 +147,9 @@
                 <div class="filasTabla">
                     <div class="espacioPequenio"></div>
                     <div class="fuente">Patente:</div>
-                    <div class="sector"><input class="inputs" type="text" placeholder="letra letra numero numero numero letra letra" ng-model="orden.camion.patente"></div>
+                    <div class="sector"><input class="inputs" type="text"
+                            placeholder="letra letra numero numero numero letra letra" ng-model="orden.camion.patente">
+                    </div>
                     <div class="fuente">tara (kg):</div>
                     <div class="sector"><input class="inputs" type="number" ng-model="orden.camion.tara"></div>
                     <div class="espacio"></div>
@@ -195,7 +200,8 @@
                     <div class="fuente">Codigo Externo:</div>
                     <div class="sector"><input class="inputs" type="number" ng-model="orden.codigoExterno"></div>
                     <div class="fuente">Fecha pesaje final:</div>
-                    <div class="sector"><input class="inputs" type="date" ng-model="orden.fechaRecepcionPesajeFinal"></div>
+                    <div class="sector"><input class="inputs" type="date" ng-model="orden.fechaRecepcionPesajeFinal">
+                    </div>
                     <div class="espacio"></div>
                     <div class="espacioVacio"></div>
                 </div>
@@ -209,9 +215,12 @@
                 <div class="filasTabla">
                     <div class="espacioPequenio"></div>
                     <div class="fuente">Patente:</div>
-                    <div class="sector"><input class="inputs" type="text" placeholder="letra letra numero numero numero letra letra" ng-model="orden.camion.patente"></div>
+                    <div class="sector"><input class="inputs" type="text"
+                            placeholder="letra letra numero numero numero letra letra" ng-model="orden.camion.patente">
+                    </div>
                     <div class="fuente">Peso final (kg):</div>
-                    <div class="sector"><input class="inputs" type="number" ng-model="orden.camion.pesoFinalCamion"></div>
+                    <div class="sector"><input class="inputs" type="number" ng-model="orden.camion.pesoFinalCamion">
+                    </div>
                     <div class="espacio"></div>
                     <div class="espacioVacio"></div>
                 </div>
@@ -226,6 +235,46 @@
             </div>
         </div>
     </div>
+
+    <!--Listo todas las ordenes-->
+    <br>
+    <label class="form-check-label fuente" for="exampleRadios2">Actualizar Orden</label>
+    <div class="tabla">
+        <div class="encabezadoTabla">
+            <div class="espacioVacio"></div>
+            <div class="titulo">Número</div>
+            <div class="titulo">Estado</div>
+            <div class="titulo">Camión</div>
+            <div class="titulo">Preset</div>
+            <div class="titulo">Carga</div>
+            <div class="titulo">Temperatura</div>
+            <div class="titulo">Densidad</div>
+            <div class="titulo">Caudal</div>
+            <div class="titulo">Tiempo transcurrido</div>
+            <div class="titulo">Tiempo restante</div>
+            <div class="titulo">Estadisticas</div>
+            <div class="titulo">Gráfica</div>
+            <div class="espacioVacio"></div>
+        </div>
+        <div class="filasTabla" ng-repeat="list in listaOrdenes" >
+            <!--En esta fila va el ng-repeat-->
+            <div class="espacioVacio"></div>
+            <div class="celda">{{list.codigoExterno}}</div>
+            <div class="celda">{{list.estado}}</div>
+            <div class="celda">{{list.camion.patente}}</div>
+            <div class="celda">{{list.camion.preset}}</div>
+            <div class="celda"><img class="imagen"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvpt6spFV3pDKV36GRdIijPno83SjH9mKa_A&usqp=CAU"
+                    alt=""></div>
+            <div class="celda"><img class="imagen" src="https://cdn-icons-png.flaticon.com/512/58/58976.png" alt="">
+            </div>
+            <div class="espacioVacio"></div>
+</body>
+
+<!--
+número, estado, camión, preset, carga actual, última temperatura,
+última densidad, último caudal
+-->
 </body>
 
 </html>
