--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,8 +36,9 @@
 
     <script type="text/javascript" src="ui/controladores/loginController.js"></script>
     <script type="text/javascript" src="ui/servicios/core-service.js"></script>
-
     <script type="text/javascript" src="ui/controladores/perfilController.js"></script>
+    <script type="text/javascript" src="ui/controladores/PerfilService.js"></script>
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="ui/vistas/crearUsuario.css">
@@ -67,11 +68,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Administracion <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a ng-click = "relocate('ordenes')">Crear</a></li>
-                        <li><a href="#">Modificar</a></li>
-                        <li><a href="#">Eliminar</a></li>
-                        <li><a href="#">Listar</a></li>
-                        <li><a href="#">Buscar</a></li>
+                        <li><a ng-click = "relocate('ordenes')">Ordenes</a></li>
+                        <li><a href="#">Cargas</a></li>
                     </ul>
                 </li>
             </ul>
