--- a/src/main/webapp/ui/vistas/perfil.html
+++ b/src/main/webapp/ui/vistas/perfil.html
@@ -1,8 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-<head></head>
-<body>
-
   <div class="tabla">
     <div class="encabezadoTabla">
       <div class="espacioVacio"></div>
@@ -20,12 +15,12 @@
       <div class="titulo">Gráfica</div>
       <div class="espacioVacio"></div>
     </div>
-    <div class="filasTabla"> <!--En esta fila va el ng-repeat-->
+    <div class="filasTabla" ng-repeat="list in listaOrdenesPorUsuario"> <!--En esta fila va el ng-repeat-->
       <div class="espacioVacio"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
+      <div class="celda">{{list.codigoExterno}}</div>
+      <div class="celda">{{list.estado}}</div>
+      <div class="celda">{{list.camion.patente}}</div>
+      <div class="celda">{{list.camion.preset}}</div>
       <div class="celda"></div>
       <div class="celda"></div>
       <div class="celda"></div>
@@ -36,8 +31,8 @@
       <div class="celda"><img class="imagen" src="https://cdn-icons-png.flaticon.com/512/58/58976.png" alt=""></div>
       <div class="espacioVacio"></div>
     </div>
+
   </div>
-</body>
 
 <!--
 número, estado, camión, preset, carga actual, última temperatura,
